Prevented elements from overflowing x-axis

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,10 @@
     padding: 0;
 }
 
+body, html {
+    overflow-x: hidden;
+}
+
 .navbar {
     top: 0;
     width: 100%;
@@ -18,6 +22,7 @@
 .nav-links {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     list-style: none;
     margin: 0 auto;
     padding: 0;
@@ -41,6 +46,7 @@
     height: 80px;
     position: absolute;
     right: 35px;
+    max-width: 100%;
 }
 
 .intro {
